# wave-equation-solver

./: CMakeLists.txt  Parallel_Wave_Equation.cpp  README.md  collate_animate.py  main.cpp
